--- a/Pag. de apresentação/index.html
+++ b/Pag. de apresentação/index.html
@@ -20,7 +20,7 @@
             <div class="links">
                 <button class="social">GitHub</button>
                 <button class="social">Frontend Mentor</button>
-                <button class="social">LinkeIn</button>
+                <button class="social">LinkedIn</button>
                 <button class="social">Twitter</button>
                 <button class="social">Instagram</button>
             </div>
