--- a/Pag. de apresentação/index.html
+++ b/Pag. de apresentação/index.html
@@ -18,11 +18,11 @@
             </div>
             <p class="information">"Frontend developer and public manager"</p>
             <div class="links">
-                <button class="social">GitHub</button>
-                <button class="social">Frontend Mentor</button>
-                <button class="social">LinkedIn</button>
-                <button class="social">Twitter</button>
-                <button class="social">Instagram</button>
+                <a href="https://github.com/guipereiraa/HTML-CSS/blob/main/Pag.%20de%20apresenta%C3%A7%C3%A3o/index.html" target="_blank" class="social">GitHub</a></a>
+                <a href="#" target="_blank" class="social">Frontend Mentor</a>
+                <a href="https://www.linkedin.com/in/guipereiraa/" target="_blank" class="social">LinkedIn</a>
+                <a href="#" target="_blank" class="social">Twitter</a>
+                <a href="https://www.instagram.com/gui.pereir/?igsh=MXRoY2M2Z2dyZ2Uzdw%3D%3D&utm_source=qr" target="_blank" class="social">Instagram</a>
             </div>
             <div class="bottomCard">
                 <span>Challenge by <a href="#" class="link1">Frontend Mentor</a>. Coded by <a href="#" class="link1">Guilherme.</a>.</span>
