--- a/Pag. de apresentação/index.html
+++ b/Pag. de apresentação/index.html
@@ -25,7 +25,7 @@
                 <a href="https://www.instagram.com/gui.pereir/?igsh=MXRoY2M2Z2dyZ2Uzdw%3D%3D&utm_source=qr" target="_blank" class="social">Instagram</a>
             </div>
             <div class="bottomCard">
-                <span>Challenge by <a href="#" class="link1">Frontend Mentor</a>. Coded by <a href="#" class="link1">Guilherme.</a>.</span>
+                <span>Challenge by <a href="#" class="link1">Frontend Mentor</a>. Coded by <a href="#" class="link1">Guilherme</a>.</span>
             </div>
         </div>
     </div>
